--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,30 +1,30 @@
 site:
-  name: AstroWind
-  site: 'https://astrowind.vercel.app'
-  base: '/'
+  name: CASB
+  site: 'https://bml.kmutt.ac.th/v2'
+  base: '/v2/'
   trailingSlash: false
 
-  googleSiteVerificationId: orcPxI47GSa-cRvY11tUe6iGg2IO_RPvnA1q95iEM3M
+  googleSiteVerificationId: false,
 
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+    default: Center for Agricultural Systems Biology (CASB) Laboratory
+    template: '%s — CASB'
+  description: "\U0001F680 CASB is formed from a group of researchers who work across disciplines, including chemical engineering, biological sciences, computer sciences, statistics and mathematics. With a highly collaborative working style, aims to utilize our multidisciplinary expertise for breaking ground of the current cellular regulation study."
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: CASB
     images:
       - url: '~/assets/images/default.png'
         width: 1200
         height: 628
     type: website
   twitter:
-    handle: '@onwidget'
-    site: '@onwidget'
+    handle: '@twitter_user'
+    site: '@twitter_user'
     cardType: summary_large_image
 
 i18n:
@@ -66,10 +66,10 @@ apps:
 analytics:
   vendors:
     googleAnalytics:
-      id: null # or "G-XXXXXXXXXX"
+      id: 'GTM-TTBTFHJ'
 
 ui:
-  theme: 'system' # Values: "system" | "light" | "dark" | "light:only" | "dark:only"
+  theme: 'light' # Values: "system" | "light" | "dark" | "light:only" | "dark:only"
 
   tokens:
     default:
