--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "lint:eslint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
-    "@astrojs/rss": "^4.0.4",
+    "@astrojs/check": "0.5.4",
+    "@astrojs/rss": "4.0.5",
     "@astrojs/sitemap": "^3.0.5",
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "^1.0.0-beta.5",
     "@fontsource-variable/inter": "^5.0.16",
-    "astro": "^4.2.6",
+    "astro": "4.4.0",
     "astro-icon": "^1.0.3",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "typescript": "^5.3.3",
     "typescript-esbuild": "^0.3.6",
-    "unpic": "^3.16.0",
-    "@astrojs/check": "^0.4.1",
-    "typescript": "^5.3.3"
+    "unpic": "^3.16.0"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^2.1.0",
+    "@astrojs/mdx": "2.1.1",
     "@astrojs/partytown": "^2.0.4",
     "@astrojs/tailwind": "5.1.0",
     "@iconify-json/flat-color-icons": "^1.1.10",
@@ -47,8 +47,7 @@
     "reading-time": "^1.5.0",
     "sharp": "0.33.2",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.1"
   },
   "engines": {
     "node": ">=18.14.1"
