--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
     "lint:eslint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.5.4",
-    "@astrojs/rss": "4.0.5",
-    "@astrojs/sitemap": "^3.0.5",
+    "@astrojs/check": "0.9.3",
+    "@astrojs/rss": "4.0.7",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "^1.0.0-beta.5",
-    "@fontsource-variable/inter": "^5.0.16",
-    "astro": "4.4.0",
-    "astro-icon": "^1.0.3",
+    "@fontsource-variable/inter": "^5.1.0",
+    "astro": "4.15.5",
+    "astro-icon": "^1.1.1",
+    "caniuse-lite": "^1.0.30001660",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
-    "typescript": "^5.3.3",
-    "typescript-esbuild": "^0.3.6",
-    "unpic": "^3.16.0"
+    "typescript": "^5.6.2",
+    "typescript-esbuild": "^0.4.10",
+    "unpic": "^3.18.0"
   },
   "devDependencies": {
-    "@astrojs/mdx": "2.1.1",
-    "@astrojs/partytown": "^2.0.4",
+    "@astrojs/mdx": "3.1.6",
+    "@astrojs/partytown": "^2.1.2",
     "@astrojs/tailwind": "5.1.0",
-    "@iconify-json/flat-color-icons": "^1.1.10",
-    "@iconify-json/tabler": "^1.1.104",
-    "@tailwindcss/typography": "^0.5.10",
+    "@iconify-json/flat-color-icons": "^1.2.0",
+    "@iconify-json/tabler": "^1.2.2",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/lodash.merge": "^4.6.9",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "astro-compress": "2.2.8",
-    "eslint": "^8.56.0",
-    "eslint-plugin-astro": "^0.31.3",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
+    "astro-compress": "2.3.1",
+    "eslint": "^9.10.0",
+    "eslint-plugin-astro": "^1.2.4",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "js-yaml": "^4.1.0",
     "mdast-util-to-string": "^4.0.0",
-    "prettier": "^3.2.4",
-    "prettier-plugin-astro": "^0.13.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
-    "sharp": "0.33.2",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1"
+    "sharp": "0.33.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.11"
   },
   "engines": {
     "node": ">=18.14.1"
