--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "lint:eslint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.9.3",
+    "@astrojs/check": "0.9.5",
     "@astrojs/rss": "4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/sitemap": "^3.6.0",
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "^1.0.0-beta.5",
     "@fontsource-variable/inter": "^5.1.0",
-    "astro": "4.15.5",
+    "astro": "5.16.0",
     "astro-icon": "^1.1.1",
     "caniuse-lite": "^1.0.30001660",
     "limax": "4.1.0",
@@ -28,12 +28,13 @@
     "unpic": "^3.18.0"
   },
   "devDependencies": {
-    "@astrojs/mdx": "3.1.6",
-    "@astrojs/partytown": "^2.1.2",
-    "@astrojs/tailwind": "5.1.0",
+    "@astrojs/mdx": "4.3.12",
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/tailwind": "6.0.2",
     "@iconify-json/flat-color-icons": "^1.2.0",
     "@iconify-json/tabler": "^1.2.2",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash.merge": "^4.6.9",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
