--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,19 +3,21 @@ name: Deploy Astro site to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main # Trigger the workflow on pushes to the 'main' branch
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: pages
-  cancel-in-progress: false
-
+# Sets permissions for the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: read # To checkout the repository code
+  pages: write # To deploy to GitHub Pages
+  id-token: write # To authenticate with OIDC for pages deployment
+
+# Ensure that only one deploy workflow is running at a time
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -23,32 +25,32 @@ jobs:
     steps:
       - name: Checkout your repository
         uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: latest
-          # Caches pnpm store and sets up `pnpm` command
-          cache: true
+          node-version: 20 # Use Node.js version 20
+          cache: "npm" # Cache npm dependencies
+
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm install
+
       - name: Build Astro site
-        run: pnpm build
+        run: npm run build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          # The directory where Astro outputs the build artifacts
+          path: "./dist"
 
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build # This job depends on the 'build' job completing successfully
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v4 # Deploy the artifact to GitHub Pages
